// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`rule deprecated-rule should contain contextual documentation 1`] = `
{
  "description": "The rule "my-rule" is deprecated and should not be used any longer, consult documentation for further information.",
  "url": "https://html-validate.org/rules/deprecated-rule.html",
}
`;

exports[`rule deprecated-rule should contain documentation 1`] = `
{
  "description": "This rule is deprecated and should not be used any longer, consult documentation for further information.",
  "url": "https://html-validate.org/rules/deprecated-rule.html",
}
`;
